# cargo-verbump

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
