[package]
name = "cargo-verbump"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", default-features = false, features = ["std"] }
clap = { version = "4.5.53", default-features = false, features = ["derive", "help", "std", "usage"] }
semver = { version = "1.0.27", default-features = false, features = ["std"] }
toml_edit = { version = "0.23.9", default-features = false, features = ["display", "parse"] }

[dev-dependencies]
tempfile = { version = "3.23.0", default-features = false }
